added three more fields to contacts
